<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2014 Markus Grieder
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public
 * License along with this program.  If not, see
 * <http://www.gnu.org/licenses/gpl-3.0.html>. 
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/preferences_sync_title" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="sync_onlywifi"
            android:summary="@string/preferences_sync_wifi_summary"
            android:title="@string/preferences_sync_wifi_title" />
        <ListPreference
            android:defaultValue="60"
            android:entries="@array/preferences_synctime_entries"
            android:entryValues="@array/preferences_synctime_values"
            android:key="sync_time"
            android:summary="@string/preferences_synctime_summary"
            android:title="@string/preferences_synctime_title" />
    </PreferenceCategory>

</PreferenceScreen>