<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2014 Markus Grieder
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public
 * License along with this program.  If not, see
 * <http://www.gnu.org/licenses/gpl-3.0.html>. 
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/noContactsMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:singleLine="false"
                android:text="@string/import_activity_nocontacts"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textIsSelectable="true"
                android:visibility="gone" />

            <Button
                android:id="@+id/startContactApp"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/noContactsMessage"
                android:layout_centerHorizontal="true"
                android:text="@string/import_activity_startcontact_btn"
                android:visibility="gone" 
                android:onClick="handleStartPeople"/>

            <TextView
                android:id="@+id/sourceAccountTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/import_activity_accounttype_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/sourceAccountSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/sourceAccountTitle" />

            <CheckBox
                android:id="@+id/deleteLocalCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/sourceAccountSpinner"
                android:layout_below="@+id/sourceAccountSpinner"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:text="@string/import_activity_deleteoption" />

            <TextView
                android:id="@+id/destAccountTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/deleteLocalCheckbox"
                android:text="@string/import_activity_accountname_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/destAccountSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/destAccountTitle"
                android:visibility="gone" />

            <TextView
                android:id="@+id/message_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="true"
                android:visibility="gone" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonImport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:onClick="handleImport"
        android:text="@string/import_activity_import" />

</LinearLayout>