<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2014 Markus Grieder
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public
 * License along with this program.  If not, see
 * <http://www.gnu.org/licenses/gpl-3.0.html>. 
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/accountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:text="@string/viewkeypwd_activity_message"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RelativeLayout
        android:id="@+id/pwd_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/pwd1_label"
            android:layout_width="wrap_content"
            android:layout_height="48dip"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:text="@string/keypwd_activity_pwd1_label" />

        <TextView
            android:id="@+id/pwd1_edit"
            android:layout_width="150sp"
            android:layout_height="48dip"
            android:layout_toRightOf="@id/pwd1_label"
            android:ems="10"
            android:gravity="center_vertical"
            android:singleLine="true" >
        </TextView>

        <TextView
            android:id="@+id/pwd2_label"
            android:layout_width="wrap_content"
            android:layout_height="48dip"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/pwd1_label"
            android:gravity="center_vertical"
            android:text="@string/keypwd_activity_pwd2_label" />

        <TextView
            android:id="@+id/pwd2_edit"
            android:layout_width="150sp"
            android:layout_height="48dip"
            android:layout_below="@id/pwd1_edit"
            android:layout_toRightOf="@id/pwd2_label"
            android:ems="10"
            android:gravity="center_vertical"
            android:singleLine="true" >
        </TextView>

        <TextView
            android:id="@+id/pwd3_label"
            android:layout_width="wrap_content"
            android:layout_height="48dip"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/pwd2_label"
            android:gravity="center_vertical"
            android:text="@string/keypwd_activity_pwd3_label" />

        <TextView
            android:id="@+id/pwd3_edit"
            android:layout_width="150sp"
            android:layout_height="48dip"
            android:layout_below="@id/pwd2_edit"
            android:layout_toRightOf="@id/pwd3_label"
            android:ems="10"
            android:gravity="center_vertical"
            android:singleLine="true" >
        </TextView>

        <TextView
            android:id="@+id/pwd4_label"
            android:layout_width="wrap_content"
            android:layout_height="48dip"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/pwd3_label"
            android:gravity="center_vertical"
            android:text="@string/keypwd_activity_pwd4_label" />

        <TextView
            android:id="@+id/pwd4_edit"
            android:layout_width="150sp"
            android:layout_height="48dip"
            android:layout_below="@id/pwd3_edit"
            android:layout_toRightOf="@id/pwd4_label"
            android:ems="10"
            android:gravity="center_vertical"
            android:singleLine="true" >
        </TextView>

        <TextView
            android:id="@+id/pwd5_label"
            android:layout_width="wrap_content"
            android:layout_height="48dip"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/pwd4_label"
            android:gravity="center_vertical"
            android:text="@string/keypwd_activity_pwd5_label" />

        <TextView
            android:id="@+id/pwd5_edit"
            android:layout_width="150sp"
            android:layout_height="48dip"
            android:layout_below="@id/pwd4_edit"
            android:layout_toRightOf="@id/pwd5_label"
            android:ems="10"
            android:gravity="center_vertical"
            android:singleLine="true" >
        </TextView>
    </RelativeLayout>

    <TextView
        android:id="@+id/message_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>