<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2014 Markus Grieder
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public
 * License along with this program.  If not, see
 * <http://www.gnu.org/licenses/gpl-3.0.html>. 
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:id="@+id/scrollview" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_activity_email_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:minWidth="250dip"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:maxLength="254" >

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dip"
                android:text="@string/register_activity_name_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:minWidth="250dip"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:maxLength="256" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dip"
                android:singleLine="true"
                android:text="@string/register_activity_password_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:minWidth="250dip"
                android:scrollHorizontally="true"
                android:singleLine="true" />

            <TextView
                android:id="@+id/message_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="true"
                android:visibility="gone" />

            <TextView
                android:id="@+id/message_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="true" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="54dip"
        android:paddingLeft="2dip"
        android:paddingRight="2dip"
        android:paddingTop="4dip" >

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:minWidth="100dip"
            android:onClick="handleRegister"
            android:text="@string/register_activity_ok_button" />
    </FrameLayout>

</LinearLayout>